# PIPELINE_FINANCE_PROJECT

./: .pre-commit-config.yaml  .user.yml  Dockerfile  README.md  profiles.yml  pyproject.toml
.astro/: config.yaml
dags/: main.py
dags/extract/bacen/: extract_ipca_rate.py
dags/extract/ibge/: extract_unemployment_rate.py
db/: create_tables.py  db.py
db/bacen/: crud.py  models.py
db/ibge/: crud.py  models.py
extract/: bc_ipca_requests.py  create_tables.py  crud.py  db.py  models.py
extract/bacen/: extract_ipca_rate.py
extract/ibge/: extract_unemployment_rate.py
include/.dbt/: profiles.yml
pipeline_project_2/: dbt_project.yml
pipeline_project_2/models/marts/: ipca_unemployments.sql  schemas.yml
pipeline_project_2/models/staging/bacen_api/: schemas.yml  sources.yml  stg_bacen__ipcas.sql
pipeline_project_2/models/staging/ibge_api/: schemas.yml  schemas_stg_ibge.yml  sources.yml  stg_ibge__unemployments.sql
