[project]
name = "projeto-weather"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Mattos",email = "rodrigo.mattos.rocha@poli.ufrj.br"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=1.4.54,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
