[project]
name = "projeto-weather"
version = "0.1.0"
description = ""
authors = [
    {name = "Rodrigo Mattos",email = "rodrigo.mattos.rocha@poli.ufrj.br"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
